Media Query logo fix for being too small.

--- a/public/style.css
+++ b/public/style.css
@@ -459,18 +459,27 @@ h2 {
     .appointment-logo {
         text-align: center;
         justify-content: center;
+        margin-top: 2em;
+        /* Add a minimum width or height */
+        min-width: 300px; 
+    }
+
+    .appointment-logo img {
+        /* Remove max-width and height auto if not necessary */
+        width: 100%; 
     }
 
     .loginbox {
         width: 100%;
-        padding: 10px;
         margin: auto;
     }
     
     .appointment-header {
-        font-size: 1.5em;
-        margin-top: 1em;
+        font-size: 1.25em;
+        margin-top: 2em;
+        text-align: center;    
     }
+
     
     form {
         display: flex;
@@ -478,10 +487,10 @@ h2 {
     }
 
     label, input {
-        margin: 5px 0;
+        margin: 15px 0;
     }
 
     button {
-        margin: 10px 0;
+        margin: 50px 0;
     }
 }
